--- a/starship.toml
+++ b/starship.toml
@@ -15,9 +15,6 @@ diverged = "[⇡⇣](cyan)"
 behind = "[⇣](cyan)"
 format = '([$modified $ahead_behind]($style) )'
 
-[memory_usage]
-disabled = "false"
-
 [directory]
 truncate_to_repo = false
 truncation_length = 0
@@ -30,36 +27,37 @@ error_symbol = "[❯](red)"
 
 [username]
 style_user = "242"
-
+format = "[$user]($style) @ "
 [hostname]
 style = "242"
-
+format = "[$hostname]($style) "
 [package]
 format = " [$symbol$version]($style) "
 style = "242"
 
 [python]
 style = "242"
-format = "[${symbol}${pyenv_prefix}(${version} )(($virtualenv ))]($style)"
+symbol = "🐍"
+format = "[${pyenv_prefix}${version} ($virtualenv)]($style) "
 
 [java]
-format = "[${symbol}(${version})]($style)"
+format = "[${symbol}(${version})]($style) "
 style = "242"
 
 [swift]
-format = "[${symbol}(${version})]($style)"
+format = "[${symbol}(${version})]($style) "
 style = "242"
 
 [golang]
-format = "[${symbol}(${version})]($style)"
+format = "[${symbol}(${version})]($style) "
 style = "242"
 
 [kotlin]
-format = "[${symbol}(${version})]($style)"
+format = "[${symbol}(${version})]($style) "
 style = "242"
 
 [dart]
-format = "[${symbol}(${version})]($style)"
+format = "[${symbol}(${version})]($style) "
 style = "242"
 
 [conda]
@@ -71,5 +69,12 @@ format = "[$symbol$context]($style) "
 style = "242"
 
 [nodejs]
-format = "[$symbol($version) ]($style)"
+format = "[$symbol($version)]($style) "
+style = "242"
+
+[cmake]
+format = "[$symbol($version )]($style)"
+style = "242"
+[lua]
+format = "[$symbol($version )]($style)"
 style = "242"
